--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Sample Website</title>
         <style>
             body{
-                background-color: aquamarine;
+                background-color: lightblue;
                 text-align: center;
             }
             
@@ -12,6 +12,7 @@
     <body>
         <h1>Welcome to Website</h1>
         <h2>Topics</h2>
+        <h3>Azure App</h3>
         <ul>
             <li>Azure VM</li>
             <li>Azure Load Balancer</li>
